recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:4: error: not found: value avancer
    avancer(length);
    ^Tree:6: error: not found: value avancer
    avancer(length);
    ^Tree:8: error: not found: value reculer
    reculer(length);
    ^Tree:11: error: not found: value avancer
    avancer(length);
    ^